[project]
name = "claudesrc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.35.0",
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
